--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-ui-router": "~0.2.13",
     "bootstrap-sass-official": "~3.3.1",
     "angular-bootstrap": "~0.12.0",
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "isotope": "~2.2.0",
+    "imagesloaded": "~3.1.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
@@ -19,5 +21,19 @@
   "resolutions": {
     "jquery": "~2.1.1",
     "angular": "~1.3.4"
+  },
+  "overrides": {
+    "outlayer": {
+      "main": [
+        "item.js",
+        "outlayer.js"
+      ]
+    },
+    "isotope": {
+      "main": [
+        "item.js",
+        "isotope.js"
+      ]
+    }
   }
 }
