--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-bootstrap": "~0.12.0",
     "angular": "~1.3.4",
     "isotope": "~2.2.0",
-    "imagesloaded": "~3.1.8"
+    "imagesloaded": "~3.1.8",
+    "angular-local-storage": "~0.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
