--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular": "~1.3.4",
     "isotope": "~2.2.0",
     "imagesloaded": "~3.1.8",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "Bootflat": "~2.0.4",
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
