--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "imagesloaded": "~3.1.8",
     "angular-local-storage": "~0.1.5",
     "Bootflat": "~2.0.4",
+    "ngInfiniteScroll": "~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
